fix: edit icon aria labels and alignment to the headings

--- a/fpcare/src/app/styles/overrides.scss
+++ b/fpcare/src/app/styles/overrides.scss
@@ -185,3 +185,8 @@ h1, h2, h3,
 .btn-primary:disabled {
     background-color: #010105 !important;
 }
+
+.align-icon{
+  margin-top: 25px;
+  float: right;
+}
